--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
     </div>
     <div class="mb-2 relative">
       <button id="shareUrl" type="button" class="absolute r-0 p-2">🔗</button>
-      <textarea id="cards" class="cards rb-0 mb-0_5"
-        placeholder="2 Opt&#10;1 Riverglide Pathway // Lavaglide Pathway&#10;1 https://i.imgur.com/x2bOOjY.jpg"
-        wrap="off" rows="10">
+      <textarea id="cards" class="cards rb-0 mb-0_5" placeholder="Library" wrap="off" rows="10">
 </textarea>
-      <textarea id="extra_tokens" class="rb-0 rt-0 mb-0_5 extra_tokens" placeholder="1 Squirrel" wrap="off" rows="2">
+      <textarea id="extra_tokens" class="rb-0 rt-0 mb-0_5 extra_tokens" placeholder="Tokens" wrap="off" rows="2">
 </textarea>
-      <textarea id="extra_emblems" class="rt-0 extra_emblems" placeholder="1 Teferi, Hero of Dominaria" wrap="off"
+      <textarea id="extra_emblems" class="rt-0 extra_emblems" placeholder="Emblems" wrap="off"
         rows="2">
 </textarea>
     </div>
