added filename field

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         rows="2">
 </textarea>
     </div>
+    <div class="mb-2 relative">
+      <label for="pdfFilename" style="display:block;margin-bottom:0.25em;">PDF filename:</label>
+      <input id="pdfFilename" type="text" placeholder="file_name" style="width:100%;margin-bottom:0.5em;" />
+    </div>
     <div class="mb-2 grid gap grid-flow-col">
       <button class="display">&#128270;</button>
       <button class="print">&#128424;</button>
