add commander button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="mb-2 grid gap grid-flow-col">
       <button class="display">&#128270;</button>
       <button class="print">&#128424;</button>
+      <button class="commander">Commander</button>
     </div>
     <select class="mb-2 size">
       <option value="normalSize">Normal card size</option>
